[package]
  name = "lightdotso-common"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  alloy = { workspace = true }
  eyre = { workspace = true }
  serde = { workspace = true }
