[package]
  name = "lightdotso-consumer"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  backon = { workspace = true }
  chrono = { workspace = true }
  clap = { workspace = true, features = ["derive"] }
  ethers = { workspace = true }
  eyre = { workspace = true }
  lightdotso-db = { workspace = true }
  lightdotso-indexer = { workspace = true }
  lightdotso-kafka = { workspace = true }
  lightdotso-tracing = { workspace = true }
  rdkafka = { workspace = true }
  serde_json = { workspace = true }
