[package]
  name = "lightdotso-consumer"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  alloy = { workspace = true }
  async-trait = { workspace = true }
  backon = { workspace = true }
  chrono = { workspace = true }
  clap = { workspace = true }
  eyre = { workspace = true }
  lazy_static = { workspace = true }
  lightdotso-billing = { workspace = true }
  lightdotso-client = { workspace = true }
  lightdotso-common = { workspace = true }
  lightdotso-contracts = { workspace = true }
  lightdotso-covalent = { workspace = true }
  lightdotso-db = { workspace = true }
  lightdotso-hyper = { workspace = true }
  lightdotso-indexer = { workspace = true }
  lightdotso-interpreter = { workspace = true }
  lightdotso-kafka = { workspace = true }
  lightdotso-node = { workspace = true }
  lightdotso-notifier = { workspace = true }
  lightdotso-opentelemetry = { workspace = true }
  lightdotso-polling = { workspace = true }
  lightdotso-prisma = { workspace = true }
  lightdotso-redis = { workspace = true }
  lightdotso-routescan = { workspace = true }
  lightdotso-sqlx = { workspace = true }
  lightdotso-tracing = { workspace = true }
  lightdotso-utils = { workspace = true }
  opentelemetry = { workspace = true }
  prisma-client-rust = { workspace = true }
  rdkafka = { workspace = true }
  serde = { workspace = true }
  serde_json = { workspace = true }
  tokio = { workspace = true }

[dev-dependencies]
  dotenvy = { workspace = true }
  rustls = { workspace = true }
