[package]
  name = "lightdotso-contracts"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  ethers = { workspace = true }
  eyre = { workspace = true }
  lazy_static = { workspace = true }
