[package]
  name = "lightdotso-contracts"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  alloy = { workspace = true }
  eyre = { workspace = true }
  hashbrown = "0.14.3"
  lazy_static = { workspace = true }
  lightdotso-common = { workspace = true }
  lightdotso-constants = { workspace = true }
  lightdotso-prisma = { workspace = true }
  prisma-client-rust = { workspace = true }
  reqwest = { workspace = true }
  serde = { workspace = true }
  serde_json = { workspace = true }
  tokio = { workspace = true }
