[package]
  name = "lightwallet-core"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[lib]
  name = "uniffi_lightwallet_core"
  crate-type = ["staticlib"]

[dependencies]
  uniffi = "0.24.2"
  uniffi_macros = "0.24.2"

  lightdotso-keychain = { path = "../keychain" }

[build-dependencies]
  uniffi_build = { version = "0.24.2", features = ["builtin-bindgen"] }
