[package]
  name = "lightwallet-core"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[lib]
  name = "uniffi_lightwallet_core"
  crate-type = ["staticlib"]

[dependencies]
  lightdotso-keychain = { path = "../keychain" }
  uniffi = { workspace = true }
  uniffi_macros = { workspace = true }

[build-dependencies]
  uniffi_build = { workspace = true, features = ["builtin-bindgen"] }
