[package]
  name = "lightdotso-dag"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  dagrs = { git = "https://github.com/dagrs-dev/dagrs", rev = "81eb85ccf11604a47f60fa573a07df3d57fa28fb", package = "dagrs" }
