[package]
  name = "lightdotso-db"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  alloy = { workspace = true }
  autometrics = { workspace = true }
  axum = { workspace = true }
  ethers = { workspace = true }
  ethers-main = { workspace = true }
  eyre = { workspace = true }
  lightdotso-contracts = { workspace = true }
  lightdotso-graphql = { workspace = true }
  lightdotso-interpreter = { workspace = true }
  lightdotso-prisma = { workspace = true }
  lightdotso-tracing = { workspace = true }
  lightdotso-utils = { workspace = true }
  prisma-client-rust = { workspace = true }
  revm = { workspace = true }
  serde = { workspace = true }
  serde_json = { workspace = true }
  tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }

[dev-dependencies]
  dotenvy = { workspace = true }
