[package]
  name = "lightdotso-discord"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  eyre = { workspace = true }
  serenity = "0.11"
  tokio = { workspace = true }
