[package]
  name = "lightdotso-discord"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  clap = { workspace = true }
  eyre = { workspace = true }
  lazy_static = { workspace = true }
  lightdotso-tracing = { workspace = true }
  serde_json = { workspace = true }
  serenity = { version = "0.12.2", features = ["full"] }
  tokio = { workspace = true }

[dev-dependencies]
  dotenvy = { workspace = true }
