[package]
  name = "lightdotso-gas"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  alloy = { workspace = true }
  async-trait = { workspace = true }
  clap = { workspace = true }
  eyre = { workspace = true }
  jsonrpsee = { workspace = true }
  lightdotso-contracts = { workspace = true }
  lightdotso-jsonrpsee = { workspace = true }
  lightdotso-tracing = { workspace = true }
  reqwest = { workspace = true }
  serde = { workspace = true }
  serde_json = { workspace = true }
  tokio = { workspace = true }
