[package]
  name = "lightdotso-graphql"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  alloy = { workspace = true }
  cynic = { version = "3.8.0", features = ["http-reqwest-blocking"] }
  cynic-codegen = { version = "3.8.0" }
  eyre = { workspace = true }
  lazy_static = { workspace = true }
  lightdotso-common = { workspace = true }
  lightdotso-contracts = { workspace = true }
  lightdotso-prisma = { workspace = true }
  lightdotso-tracing = { workspace = true }
  reqwest = { workspace = true, features = ["json", "blocking"] }
  tokio = { workspace = true }

[dev-dependencies]
  dotenvy = { workspace = true }
  insta = { workspace = true }

[build-dependencies]
  cynic-codegen = { version = "3.8.0" }
  eyre = { workspace = true }
