[package]
  name = "lightdotso-hyper"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  axum = { workspace = true }
  eyre = { workspace = true }
  hyper = { workspace = true }
  hyper-rustls = { workspace = true }
  hyper-util = { workspace = true }
  rustls = { workspace = true }
