[package]
  name = "lightdotso-indexer"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  anvil = { workspace = true }
  anyhow = { workspace = true }
  axum = { workspace = true }
  byteorder = { workspace = true }
  chrono = { workspace = true }
  clap = { workspace = true, features = ["derive"] }
  ethers = { workspace = true }
  eyre = { workspace = true }
  futures = { workspace = true }
  lazy_static = { workspace = true }
  lightdotso-db = { workspace = true }
  lightdotso-discord = { workspace = true }
  lightdotso-prisma = { workspace = true }
  lightdotso-tracing = { workspace = true }
  prisma-client-rust = { workspace = true }
  redb = { workspace = true }
  serde = { workspace = true }
  serde_json = { workspace = true }
  tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
  tracing = { workspace = true }
  tracing-test = { workspace = true, features = ["no-env-filter"] }
