[package]
  name = "lightdotso-indexer"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  anvil = { workspace = true }
  autometrics = { workspace = true }
  axum = { workspace = true }
  backon = { workspace = true }
  byteorder = { workspace = true }
  chrono = { workspace = true }
  clap = { workspace = true, features = ["derive"] }
  ethers = { workspace = true }
  ethers-providers = { workspace = true }
  eyre = { workspace = true }
  futures = { workspace = true }
  lazy_static = { workspace = true }
  lightdotso-db = { workspace = true }
  lightdotso-discord = { workspace = true }
  lightdotso-kafka = { workspace = true }
  lightdotso-prisma = { workspace = true }
  lightdotso-redis = { workspace = true }
  lightdotso-tracing = { workspace = true }
  prisma-client-rust = { workspace = true }
  redb = { workspace = true }
  serde = { workspace = true }
  serde_json = { workspace = true }
  tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }

[dev-dependencies]
  tracing = { workspace = true }
  tracing-test = { workspace = true, features = ["no-env-filter"] }
