[package]
  name = "lightdotso-interpreter"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  clap = { workspace = true }
  ethers-main = { workspace = true }
  eyre = { workspace = true }
  foundry-config = { workspace = true }
  foundry-evm = { workspace = true }
  lightdotso-simulator = { workspace = true }
  lightdotso-tracing = { workspace = true }
