[package]
  name = "lightdotso-interpreter"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  async-trait = { workspace = true }
  clap = { workspace = true }
  ethers-main = { workspace = true }
  eyre = { workspace = true }
  foundry-config = { workspace = true }
  foundry-evm = { workspace = true }
  futures = { workspace = true }
  lazy_static = { workspace = true }
  lightdotso-contracts = { workspace = true }
  lightdotso-simulator = { workspace = true }
  lightdotso-tracing = { workspace = true }
  revm = { workspace = true }
  serde = { workspace = true }
  strum = { workspace = true }
  strum_macros = { workspace = true }

[dev-dependencies]
  insta = { workspace = true }
  tokio = { workspace = true }
