[package]
  name = "lightdotso-jsonrpsee"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  ethers = { workspace = true }
  eyre = { workspace = true }
  jsonrpsee = { workspace = true }
  lightdotso-tracing = { workspace = true }
  reqwest = { workspace = true }
  serde = { workspace = true }
  serde_json = { workspace = true }
  silius-primitives = { workspace = true }
  url = { workspace = true }
