[package]
  name = "lightdotso-jsonrpsee"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  anyhow = { workspace = true }
  ethers = { workspace = true }
  eyre = { workspace = true }
  hyper = { workspace = true }
  jsonrpsee = { workspace = true }
  lightdotso-tracing = { workspace = true }
  reqwest = { workspace = true }
  serde = { workspace = true }
  serde_json = { workspace = true }
  tower = { workspace = true }
  tower-http = { workspace = true }
  url = { workspace = true }
