[package]
  name = "lightdotso-kafka"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  lazy_static = { workspace = true }
  lightdotso-tracing = { workspace = true }
  rdkafka = { workspace = true, features = ["ssl"] }
  serde_json = { workspace = true }
