[package]
  name = "lightdotso-kafka"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  ethers = { workspace = true }
  eyre = { workspace = true }
  lazy_static = { workspace = true }
  lightdotso-db = { workspace = true }
  lightdotso-prisma = { workspace = true }
  lightdotso-tracing = { workspace = true }
  rdkafka = { workspace = true }
  serde = { workspace = true }
  serde_json = { workspace = true }
