[package]
  name = "lightdotso-node"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  clap = { workspace = true, features = ["derive", "env"] }
  eyre = { workspace = true }
  lightdotso-tracing = { workspace = true }
