[package]
  name = "lightdotso-node"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  clap = { workspace = true, features = ["derive", "env"] }
  ethers = { workspace = true }
  eyre = { workspace = true }
  lightdotso-contracts = { workspace = true }
  lightdotso-jsonrpsee = { workspace = true }
  lightdotso-tracing = { workspace = true }
  reqwest = { workspace = true }
  serde = { workspace = true }
  serde_json = { workspace = true }
