[package]
  name = "lightdotso-node"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  alloy = { workspace = true }
  backon = { workspace = true }
  chrono = { workspace = true }
  clap = { workspace = true, features = ["derive", "env"] }
  eyre = { workspace = true }
  lightdotso-contracts = { workspace = true }
  lightdotso-jsonrpsee = { workspace = true }
  lightdotso-tracing = { workspace = true }
  reqwest = { workspace = true }
  reth-rpc-types = { workspace = true }
  serde = { workspace = true }
  serde_json = { workspace = true }
