[package]
  name = "lightdotso-notifier"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  backon = { workspace = true }
  clap = { workspace = true, features = ["derive"] }
  eyre = { workspace = true }
  lightdotso-discord = { workspace = true }
  lightdotso-tracing = { workspace = true }
  serde_json = { workspace = true }
