[package]
  name = "lightdotso-notifier"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  backon = { workspace = true }
  clap = { workspace = true }
  eyre = { workspace = true }
  lazy_static = { workspace = true }
  lightdotso-discord = { workspace = true }
  lightdotso-kafka = { workspace = true }
  lightdotso-prisma = { workspace = true }
  lightdotso-tracing = { workspace = true }
  serde = { workspace = true }
  serde_json = { workspace = true }
  strum = { workspace = true }
  strum_macros = { workspace = true }

[dev-dependencies]
  insta = { workspace = true }
