[package]
  name = "lightdotso-opentelemetry"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  axum = { workspace = true }
  futures = { workspace = true }
  lazy_static = { workspace = true }
  once_cell = { workspace = true }
  opentelemetry = { workspace = true }
  opentelemetry-prometheus = { workspace = true }
  opentelemetry_sdk = { workspace = true }
  prometheus = { workspace = true }
  time = { workspace = true }
  tokio = { workspace = true }
  tower = { workspace = true }
