[package]
  name = "lightdotso-paymaster"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  async-trait = { workspace = true }
  clap = { workspace = true }
  ethers = { workspace = true }
  eyre = { workspace = true }
  jsonrpsee = { workspace = true }
  lightdotso-contracts = { workspace = true }
  lightdotso-gas = { workspace = true }
  lightdotso-jsonrpsee = { workspace = true }
  lightdotso-tracing = { workspace = true }
  lightdotso-utils = { workspace = true }
  reqwest = { workspace = true }
  serde = { workspace = true }
  serde_json = { workspace = true }
  spki = { workspace = true, optional = true }
  tokio = { workspace = true }
