[package]
  name = "lightdotso-paymaster"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  alloy = { workspace = true }
  async-trait = { workspace = true }
  axum = { workspace = true }
  backon = { workspace = true }
  clap = { workspace = true }
  eyre = { workspace = true }
  hyper = { workspace = true }
  hyper-rustls = { workspace = true }
  jsonrpsee = { workspace = true }
  lazy_static = { workspace = true }
  lightdotso-common = { workspace = true }
  lightdotso-contracts = { workspace = true }
  lightdotso-db = { workspace = true }
  lightdotso-gas = { workspace = true }
  lightdotso-hyper = { workspace = true }
  lightdotso-jsonrpsee = { workspace = true }
  lightdotso-kafka = { workspace = true }
  lightdotso-prisma = { workspace = true }
  lightdotso-rpc = { workspace = true }
  lightdotso-signer = { workspace = true }
  lightdotso-tracing = { workspace = true }
  lightdotso-utils = { workspace = true }
  prisma-client-rust = { workspace = true }
  reqwest = { workspace = true }
  serde = { workspace = true }
  serde_json = { workspace = true }
  spki = { workspace = true, optional = true }
  tokio = { workspace = true }
