[package]
  name = "lightdotso-polling"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  axum = { workspace = true }
  backon = { workspace = true }
  chrono = { workspace = true }
  clap = { workspace = true, features = ["derive"] }
  eyre = { workspace = true }
  lightdotso-constants = { workspace = true }
  lightdotso-db = { workspace = true }
  lightdotso-graphql = { workspace = true }
  lightdotso-opentelemetry = { workspace = true }
  lightdotso-prisma = { workspace = true }
  lightdotso-tracing = { workspace = true }
  tokio = { workspace = true }
