[package]
  name = "lightdotso-prisma-postgres"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  lightdotso-prisma = { workspace = true, features = ["postgres"] }
