[package]
  name = "lightdotso-prisma"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  lightdotso-prisma-mysql = { workspace = true }
  prisma-client-rust = { workspace = true }
  prisma-client-rust-cli = { workspace = true }
  serde = { workspace = true }
